--- a/sass/_confidential.scss
+++ b/sass/_confidential.scss
@@ -13,9 +13,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); /* Overlay sombre */
+    background-color: rgba(0, 0, 0, 0.6); 
     @include mixins.flexbox(row, center, center);
-    visibility: hidden; /* Cachée par défaut */
+    visibility: hidden; 
     opacity: 0;
     z-index: 1000;
     transition: opacity 0.3s ease, visibility 0.3s ease;
@@ -31,18 +31,18 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.6); /* Overlay transparent */
+        background-color: rgba(0, 0, 0, 0.6); 
         z-index: -1;
     }
 
     &__content {
         background-color: #fff;
         width: 90%;
-        max-width: 600px; /* Largeur max pour un meilleur rendu */
+        max-width: 600px; 
         border-radius: 10px;
         padding: 2rem;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
-        transform: translateY(-50px); /* Animation d’apparition */
+        transform: translateY(-50px); 
         opacity: 0;
         transition: transform 0.3s ease, opacity 0.3s ease;
 
@@ -73,8 +73,8 @@
         color: #333;
         font-family: "Arial", sans-serif;
         line-height: 1.6;
-        overflow-y: auto; /* Permet le défilement si le contenu est trop long */
-        max-height: 80vh; /* Limite la hauteur à 80% de la vue */
+        overflow-y: auto;
+        max-height: 80vh;
     }
 
     &__title {
