--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -10,8 +10,8 @@
 .footer {
     width: 100%;
     height: 350px;
-    background-color: variables.$primary-color; // Variable pour la couleur primaire
-    color: variables.$background-color; // Variable pour la couleur de fond
+    background-color: variables.$primary-color; 
+    color: variables.$background-color; 
 
     &__container {
         width: 100%;
@@ -49,7 +49,7 @@
             flex-start,
             flex-start,
             1rem
-        ); // Utilisation de la mixin flexbox
+        ); 
         margin-top: 1.8rem;
     }
 
@@ -59,7 +59,7 @@
             flex-start,
             flex-start,
             1rem
-        ); // Utilisation de la mixin flexbox
+        ); 
         margin-top: 1.8rem;
     }
 }
