--- a/sass/_legal.scss
+++ b/sass/_legal.scss
@@ -13,9 +13,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); /* Overlay sombre */
+    background-color: rgba(0, 0, 0, 0.6); 
     @include mixins.flexbox(row, center, center);
-    visibility: hidden; /* Caché par défaut */
+    visibility: hidden; 
     opacity: 0;
     z-index: 1000;
     transition: opacity 0.3s ease, visibility 0.3s ease;
@@ -31,7 +31,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.6); /* Overlay transparent */
+        background-color: rgba(0, 0, 0, 0.6); 
         z-index: -1;
     }
 
@@ -43,7 +43,7 @@
         border-radius: 8px;
         padding: 2rem;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
-        transform: translateY(-50px); /* Animation d'apparition */
+        transform: translateY(-50px);
         opacity: 0;
         transition: transform 0.3s ease, opacity 0.3s ease;
         
