--- a/sass/_profiles.scss
+++ b/sass/_profiles.scss
@@ -68,7 +68,7 @@
         &--2 {
             position: relative;
             grid-area: 1 / 3 / 2 / 5;
-            background-color: rgba(255, 193, 7, 0.7); /* Couleur d'avertissement */
+            background-color: rgba(255, 193, 7, 0.7);
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
 
@@ -126,7 +126,7 @@
         &--4 {
             position: relative;
             grid-area: 4 / 2 / 5 / 5;
-            background-color: rgba(240, 81, 38, 0.7); /* Couleur d'erreur */
+            background-color: rgba(240, 81, 38, 0.7);
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
 
@@ -155,7 +155,7 @@
         &--5 {
             position: relative;
             grid-area: 2 / 4 / 4 / 5;
-            background-color: rgba(217, 59, 217, 0.7); /* Couleur neutre (définie dans variables) */
+            background-color: rgba(217, 59, 217, 0.7); 
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
 
@@ -184,7 +184,7 @@
         &--6 {
             position: relative;
             grid-area: 2 / 2 / 4 / 4;
-            background-color: rgba(128, 128, 128, 0.7); /* Couleur d'erreur */
+            background-color: rgba(128, 128, 128, 0.7);
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
 
@@ -277,12 +277,12 @@
             height: 80%;
             width: 70%;
             display: flex;
-            flex-direction: column; /* Aligner les items en colonne */
+            flex-direction: column;
             gap: 16px;
             position: absolute;
             bottom: 0%;
             left: 50%;
-            transform: translateX(-50%); /* Centrer horizontalement */
+            transform: translateX(-50%);
         }
 
         &__title {
@@ -335,7 +335,7 @@
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             display: flex;
-            flex-direction: column; /* Disposition en colonne pour chaque profil */
+            flex-direction: column;
             justify-content: flex-start;
             align-items: center;
             padding: 1rem;
@@ -491,7 +491,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); /* Overlay sombre */
+    background-color: rgba(0, 0, 0, 0.6);
     @include mixins.flexbox(row, center, center);
     visibility: hidden;
     opacity: 0;
@@ -509,7 +509,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.6); /* Overlay transparent */
+        background-color: rgba(0, 0, 0, 0.6);
         z-index: -1;
     }
 
@@ -683,17 +683,17 @@
         border-radius: 50%;
         font-size: 3rem;
         color: variables.$background-color;
-        transform: translateY(-50%); // Centrage vertical
+        transform: translateY(-50%);
         transition: all 0.3s ease;
         z-index: 2;
 
         &--prev {
-            left: -40px; // Place le bouton à gauche en dehors du carousel
+            left: -40px;
             background-color: variables.$primary-color;
         }
 
         &--next {
-            right: -40px; // Place le bouton à droite en dehors du carousel
+            right: -40px;
             background-color: variables.$primary-color;
         }
 
@@ -705,7 +705,7 @@
         }
 
         i {
-            line-height: 80px; // Centrage vertical de l'icône
+            line-height: 80px;
         }
     }
 
@@ -757,8 +757,8 @@
     .carousel {
         &--solo {
             .slick-slide {
-                width: 40% !important; // Ajuste la taille de l'élément
-                margin: auto; // Centre l'élément
+                width: 40% !important;
+                margin: auto;
                 justify-self: center;
                 align-self: center;
             }
@@ -766,10 +766,10 @@
 
         &--duo {
             .slick-slide {
-                width: 40% !important; // Ajuste la taille des deux éléments
+                width: 40% !important;
             }
             .slick-track {
-                justify-content: center; // Aligne les deux éléments au centre
+                justify-content: center;
             }
         }
     }
