--- a/sass/_confidential.scss
+++ b/sass/_confidential.scss
@@ -50,6 +50,10 @@
             transform: translateY(0);
             opacity: 1;
         }
+
+        @media (max-width: 1440px) {
+            height: 90%;
+        }
     }
 
     &__close {
