--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,6 +28,8 @@ body {
     background-color: variables.$background-color;
     color: variables.$font-color;
     font-family: variables.$main-font;
+    scrollbar-width: 1px;
+    scrollbar-color: #3498db #f4f4f4;
 }
 
 h1,
@@ -37,6 +39,25 @@ h4,
 h5,
 h6 {
     font-family: variables.$title-font;
+}
+
+/* Pour Chrome, Edge et Safari */
+::-webkit-scrollbar {
+    width: 0.8rem;
+}
+
+::-webkit-scrollbar-track {
+    background: variables.$background-color;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: variables.$primary-color;
+    border-radius: 6px;
+    border: 3px solid #f4f4f4;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: variables.$primary-color;
 }
 
 // TODO: bug de scroll quand on est en responsive > 992px
